Tue Aug 12 15:11:06 UTC 2014  Dennis Feiock  <dfeiock at iupui dot edu>

        * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_Env_Visitor_T.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_Execution_Visitor_T.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_IDL_Graph.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_Impl_Generator_T.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_Impl_Graph_T.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_Workspace_Generator_T.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_algorithm.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Context_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/IDL_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Project_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Servant_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Servant_Header_Include_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/ccm/Component_Implementation.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/codegen.mpc.disable:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/cpp/Component_Impl_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/opensplice/Stub_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/rtidds/Stub_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/tcpip/Input_Stream_Source_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/tcpip/Output_Stream_Source_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/tcpip/Stub_Header_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/tcpip/Stub_Source_Generator.cpp:

          Started fixing vc11 compilation errors.  Disabled project for now.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/CUTS_GME_PICML.mpc: