@@ -1,3 +1,9 @@
+Tue Aug 12 17:39:16 UTC 2014  Dennis Feiock  <dfeiock at iupui dot edu>
+
+        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/Code_Generation_Impl.cpp:
+
+          Fixed bug with saving project settings.  Re-enabled this feature.
+
 Tue Aug 12 15:11:06 UTC 2014  Dennis Feiock  <dfeiock at iupui dot edu>
 
         * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_Env_Visitor_T.cpp:
